# tiff-reader

./: CMakeLists.txt  compile_commands.json  jp.tif  main.cpp  transparent.tiff
examples/: tiff2ppm.cpp  tiff_pal.cpp
inc/: tiff_pal.h  tiff_reader.h
src/: main.cpp  tiff_pal.cpp  tiff_reader.cpp
